--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Hanken+Grotesk:400,700);
+@import url(https://fonts.googleapis.com/css?family=Hanken+Grotesk:400,700);
 
 body {
   font: 300 15px/1.6 "Hanken Grotesk", serif, sans-serif;
